# DS4CC

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install-hooks.sh
assets/: ds4cc.res
docs/: reference-ds4windows-research.md
hooks/: ds4cc-state.sh  gamepadcc-state.sh  setup.json
hooks/codex/: codex-hook-bridge.py  ds4cc-state.sh  gamepadcc-state.sh  hooks.json  install-from-claude.sh  start.sh  status.sh  stop.sh
hooks/opencode/: ds4cc-opencode.js  gamepadcc-bridge.js
installer/: ds4cc.iss  gamepadcc.iss
src/: codex_poll.rs  codex_setup.rs  config.rs  controller.rs  crc32.rs  hid.rs  input.rs  lightbar.rs  main.rs  mapper.rs  mic.rs  opencode_detect.rs  opencode_setup.rs  output.rs  rumble.rs  setup.rs  state.rs  tmux_detect.rs  tray.rs  update.rs  wsl.rs  wt_detect.rs
