[package]
name = "ds4cc"
version = "2.0.0"
edition = "2024"
description = "Windows daemon bridging DualSense/DS4 controllers with AI coding agents"

[dependencies]
hidapi = { version = "2.6", features = ["windows-native"] }
windows-sys = { version = "0.59", features = ["Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Foundation",
] }
tray-icon = "0.21"
tokio = { version = "1", features = ["rt-multi-thread", "time", "macros", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"
log = "0.4"
env_logger = "0.11"
